--- a/hotels.html
+++ b/hotels.html
@@ -32,17 +32,17 @@
               <div class="filter-infrastructure"><!--==========******БЛОК - ИНФРАСТРУКТУРА******==========-->
                 <h3 class="filter-infrastructure-title">Инфраструктура:</h3>
                 <input id="cfirst" type="checkbox" name="first" checked hidden />
-                <label class="filter-select" for="first">
+                <label class="filter-select" for="cfirst">
                   <span class="filter-name">Бассейн</span>
                 </label>
 
                 <input id="csecond" type="checkbox" name="second" hidden />
-                <label class="filter-select" for="second">
+                <label class="filter-select" for="csecond">
                   <span class="filter-name">Парковка</span>
                 </label>
 
                 <input id="cthird" type="checkbox" name="third" hidden />
-                <label class="filter-select" for="third">
+                <label class="filter-select" for="cthird">
                   <span class="filter-name">Wi-fi</span>
                 </label>
               </div>
@@ -50,17 +50,17 @@
               <div class="filter-houses"><!--==========******БЛОК - ТИПЫ ЖИЛЬЯ*********==========-->
                 <h3 class="filter-houses-title">Тип жилья:</h3>
                 <input id="cfourth" type="checkbox" name="fourth" checked hidden />
-                <label class="filter-select" for="fourth">
+                <label class="filter-select" for="cfourth">
                   <span class="filter-name-1">Гостиница</span>
                 </label>
 
                 <input id="cfifth" type="checkbox" name="fifth" checked hidden />
-                <label class="filter-select" for="fifth">
+                <label class="filter-select" for="cfifth">
                   <span class="filter-name-1">Мотель</span>
                 </label>
 
                 <input id="csix" type="checkbox" name="six" checked hidden />
-                <label class="filter-select" for="six">
+                <label class="filter-select" for="csix">
                   <span class="filter-name-1">Апартаменты</span>
                 </label>
               </div>
@@ -69,8 +69,8 @@
             <div class="filter-range"><!--==========******НАЧАЛО БЛОК - ПОЛЗУНКИ СПРАВА******==========-->
               <div class="filter-range-title">Стоимость в сутки (р):</div>
               <div class="price-controls">
-                <label class="min-price" for="min-price">от <input type="text" name="min-price" value="0"></label>
-                <label class="max-price" for="max-price">до <input type="text" name="max-price" value="3000"></label>
+                <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+                <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
               </div>
               <div class="range-controls">
                 <div class="scale">
