--- a/hotels.html
+++ b/hotels.html
@@ -19,8 +19,8 @@
         </ul>
           <a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a>
         <ul class="right">
-          <li class="menu-maps left"><a href="#">Карта штата</a></li>
-          <li  class="right"><a href="hotels.html">Гостиницы</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a class="a-second" href="hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
